@@ -1,3 +1,8 @@
+2009-11-11  Keith Seitz  <keiths@redhat.com>
+
+	* linespec.c (lookup_prefix_sym): Lookup the symbol
+	in both STRUCT_DOMAIN and VAR_DOMAIN.
+
 2009-11-11  Michael Snyder  <msnyder@vmware.com>
 
 	* darwin-nat-info.c: Update copyright.
